[package]
name = "appname"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "^0.4.0"
wasm-bindgen = "^0.2.42"
web-sys = {version = "0.3.24", features = ["WebSocket", "MessageEvent"]}
serde = { version = "^1.0.85", features = ['derive'] }
serde_json = "^1.0.39"
futures = "^0.1.26"
